--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vueuse/core": "^9.3.0",
     "arco-design-pro-vue": "^2.5.14",
     "axios": "^0.24.0",
+    "commitlint": "^17.8.1",
     "dayjs": "^1.11.5",
     "echarts": "^5.4.0",
     "js-base64": "^3.7.4",
