--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,3 @@
-VITE_API_BASE_URL= 'http://10.30.1.191:8092//api/CommonCall'
+VITE_API_BASE_URL='http://localhost:60626/api/CommonCall' 
+
+# 'http://10.30.1.191:8092//api/CommonCall'
