--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "ArcoDesign Team",
   "license": "MIT",
   "scripts": {
-    "dev": "vite --config ./config/vite.config.dev.ts",
+    "dev": "vite --config ./config/vite.config.dev.ts --host 0.0.0.0",
     "build": "vue-tsc --noEmit && vite build --config ./config/vite.config.prod.ts",
     "report": "cross-env REPORT=true npm run build",
     "preview": "npm run build && vite preview --host",
@@ -31,6 +31,8 @@
   },
   "dependencies": {
     "@arco-design/web-vue": "^2.37.4",
+    "@kirizu/datav-vue3": "^0.0.0-alpha.1",
+    "@kjgl77/datav-vue3": "^1.7.3",
     "@vueuse/core": "^9.3.0",
     "arco-design-pro-vue": "^2.5.14",
     "axios": "^0.24.0",
@@ -45,8 +47,9 @@
     "query-string": "^7.1.1",
     "sortablejs": "^1.15.0",
     "ts-md5": "^1.3.1",
+    "v-scale-screen": "^2.2.0",
     "vue": "^3.2.40",
-    "vue-echarts": "^6.2.3",
+    "vue-echarts": "^6.7.3",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.14",
     "xlsx": "^0.18.5"
