--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "js-base64": "^3.7.4",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
+    "moment": "^2.30.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.23",
     "query-string": "^7.1.1",
@@ -59,6 +60,7 @@
     "@commitlint/config-conventional": "^17.1.0",
     "@types/lodash": "^4.14.186",
     "@types/mockjs": "^1.0.7",
+    "@types/moment": "^2.11.29",
     "@types/nprogress": "^0.2.0",
     "@types/sortablejs": "^1.15.0",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
