--- a/src/config/settings.json
+++ b/src/config/settings.json
@@ -12,7 +12,7 @@
   "device": "desktop",
   "tabBar": true,
   "menuFromServer": true,
-  "api_url": "http://localhost:60626/api/CommonCall",
+  "api_url": "http://10.30.3.50:800//api/CommonCall",
   "serverMenu": [],
   "CompanyCode": "aphmes",
   "CompanyName": "aphmes"
