--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL= 'http://localhost:60626/api/CommonCall'
+VITE_API_BASE_URL= 'http://10.30.3.50:800//api/CommonCall'
+# VITE_API_BASE_URL= 'http://10.30.3.50:800//api/CommonCall'
