--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["node", "moment"],
     "target": "ES2020",
     "module": "ES2020",
     "moduleResolution": "node",
